--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <div class="dropdown dropdown-end">
                 <label tabindex="0" class="btn btn-ghost btn-circle avatar">
                   <div class="w-10 rounded-full">
-                    <img src="/images/avatar.png" />
+                    <img src="./images/avatar.png" />
                   </div>
                 </label>
                 <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
@@ -81,7 +81,7 @@
             <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
                   <!-- card-1 -->
                 <div class="card   bg-base-100 shadow-xl image-full">
-                    <figure><img src="/images/shoes.avif" alt="Shoes" /></figure>
+                    <figure><img src="./images/shoes.avif" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Shoes!</h2>
                       <p>At DaisyMan, we believe that style is a reflection of your unique personality and our mission is to provide you with a diverse and trendy collection.</p>
@@ -92,7 +92,7 @@
                   </div>
                   <!-- card-2 -->
                   <div class="card bg-base-100 shadow-xl image-full">
-                    <figure><img src="/images/hoodies.avif" alt="Shoes" /></figure>
+                    <figure><img src="./images/hoodies.avif" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Clothes!</h2>
                       <p>At DaisyMan, we believe that style is a reflection of your unique personality and our mission is to provide you with a diverse and trendy collection.</p>
@@ -103,7 +103,7 @@
                     <!-- card-3 -->
                   </div>
                   <div class="card bg-base-100 shadow-xl image-full">
-                    <figure><img src="/images/perfume.avif" alt="Shoes" /></figure>
+                    <figure><img src="./images/perfume.avif" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Perfumes!</h2>
                       <p>At DaisyMan, we believe that style is a reflection of your unique personality and our mission is to provide you with a diverse and trendy collection.</p>
@@ -137,7 +137,7 @@
             <div class="grid grid-cols-1 gap-5 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
                 <!-- 1st card -->
                 <div class="card  bg-base-100 shadow-xl">
-                    <figure><img src="/images/elegant-businessman-shirt-wooden-desk-stack-generated-by-ai_188544-34678.avif" alt="Shoes" /></figure>
+                    <figure><img src="./images/elegant-businessman-shirt-wooden-desk-stack-generated-by-ai_188544-34678.avif" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Casual Shirt</h2>
                       <p>Our mission is to provide you with a diverse and trendy collection.</p>
@@ -159,7 +159,7 @@
                   </div>
                   <!-- 3rd card -->
                 <div class="card  bg-base-100 shadow-xl">
-                    <figure><img src="/images/blue-yellow-t-shirt-wooden-hanger-generated-by-ai_188544-42185.avif" alt="Shoes" /></figure>
+                    <figure><img src="./images/blue-yellow-t-shirt-wooden-hanger-generated-by-ai_188544-42185.avif" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Trendy T-Shirt</h2>
                       <p>Our mission is to provide you with a diverse and trendy collection.</p>
@@ -170,7 +170,7 @@
                   </div>
                   <!-- 4th card -->
                 <div class="card  bg-base-100 shadow-xl">
-                    <figure><img src="/images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="Shoes" /></figure>
+                    <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Formal Shirt</h2>
                       <p>Our mission is to provide you with a diverse and trendy collection.</p>
