--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                       </div>
                     </div>
                   </div>
-                  <!-- secpmd card -->
+                  <!-- second card -->
                 <div class="card  bg-base-100 shadow-xl">
-                    <figure><img src="/images/shiny-black-leather-shoes-exude-modern-luxury-generated-by-ai_188544-36154.avif" alt="Shoes" /></figure>
+                    <figure><img src="./images/shiny-black-leather-shoes-exude-modern-luxury-generated-by-ai_188544-36154.avif" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Formal Shoe</h2>
                       <p>Our mission is to provide you with a diverse and trendy collection.</p>
